# einsum-explainer

./: asset-manifest.json  index.html  package.json  precache-manifest.1d8f22021c688a2987056b7e93f21677.js  precache-manifest.353262b6d017d2f4900cbe0121b7b03b.js  precache-manifest.4bcfb5554fcc9ac559e108dbe1d98e4a.js  precache-manifest.6825ed65b38936cec931272a0625b14b.js  precache-manifest.8deb2caeba0c4a082ebafa82653096cd.js  precache-manifest.a0d715b15295611d6149efbbec878a0d.js  precache-manifest.bbb0e8b6e47175ba779808bea03f5757.js  precache-manifest.be583e9139b7f635e99818a7a0a20dab.js  precache-manifest.cb3b9fbef5c866ae62c10d52782d758c.js  precache-manifest.d186b3f9780ecf20318583c960d70e56.js  precache-manifest.d9ece0eb918878585ec1f4a5751b320e.js  precache-manifest.ead901a3ebd16b9bfcf575cba3d073bf.js  precache-manifest.eafc903713d74252f1d353ee4a7f5976.js  precache-manifest.efecc7b242860bec4989674748cdcdf6.js  service-worker.js  tsconfig.json  tslint.json
einsum-wasm/: Cargo.toml
einsum-wasm/src/: lib.rs
pkg/: einsum.d.ts  einsum.js  einsum_bg.d.ts  einsum_bg.wasm  einsum_wasm.d.ts  einsum_wasm.js  einsum_wasm_bg.d.ts  einsum_wasm_bg.wasm  package.json
public/: index.html
src/: App.css  App.tsx  AxisLengthsOutput.tsx  ContractionOutput.tsx  EinsumExplainer.tsx  ExplainerInput.tsx  ExplainerOutput.tsx  appState.ts  duck_types.d.ts  einsum_typeguards.ts  einsum_types.d.ts  index.js  makeLatexString.ts  makeReducer.ts  parseShapeStrings.ts  state_types.d.ts
src/appstate/: appState.ts  makeOperand.ts  presets.ts
src/components/: App.css  (+21 more)
types/: katex.d.ts
(+72 files in other folders)
