[package]
name = "einsum-wasm"
version = "0.1.0"
authors = ["oracleofnj <jared.samet@aya.yale.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.12.1"
ndarray_einsum_beta = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.45"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
